syntax = "proto3";
package sgn.slashing.v1;

option go_package = "github.com/celer-network/sgn-v2/x/slashing/types";
option (gogoproto.equal_all) = true;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "sgn/common/v1/common.proto";

message Params {
  bool enable_slash = 1 [(gogoproto.moretags) = "yaml:\"enable_slash\""];
  int64 signed_blocks_window = 2 [(gogoproto.moretags) = "yaml:\"signed_blocks_window\""];
  uint64 slash_timeout = 3 [(gogoproto.moretags) = "yaml:\"slash_timeout\""];
  uint64 slash_factor_double_sign = 4 [(gogoproto.moretags) = "yaml:\"slash_factor_double_sign\""];
  uint64 slash_factor_downtime = 5 [(gogoproto.moretags) = "yaml:\"slash_factor_downtime\""];
  uint64 jail_period = 6 [(gogoproto.moretags) = "yaml:\"jail_period\""];
  bytes min_signed_per_window = 7 [
    (gogoproto.moretags) = "yaml:\"min_signed_per_window\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  sgn.common.v1.ContractInfo staking_contract = 8 [(gogoproto.nullable) = false];
}

message Slash {
  option (gogoproto.goproto_stringer) = false;

  SlashOnChain slash_on_chain = 1 [(gogoproto.moretags) = "yaml:\"slash_on_chain\"", (gogoproto.nullable) = false];
  bytes slash_bytes = 2 [(gogoproto.moretags) = "yaml:\"slash_bytes\""];
  repeated sgn.common.v1.Signature signatures = 3 [(gogoproto.nullable) = false];
  string reason = 4;
}
// msg to be submitted to the onchain contract
message SlashOnChain {
  option (gogoproto.goproto_stringer) = false;

  bytes validator = 1;  // [(soltype) = "address"]
  uint64 nonce = 2;
  uint64 slash_factor = 3;
  uint64 expire_time = 4;  // block timestamp
  uint64 jail_period = 5;  // eth block number
  repeated AcctAmtPair collectors = 6;
}

message AcctAmtPair {
  option (gogoproto.goproto_stringer) = false;

  bytes account = 1;  // [(soltype) = "address"]
  bytes amount = 2;   // [(soltype) = "uint256"]
}

message QuerySlashParams {
  uint64 nonce = 1;
}


